Implementation of store